# sdf

./: pyproject.toml
.github/workflows/: publish-pypi.yaml
sdf/: core.py  d2.py  d3.py  dn.py  mesh.py  stl.py  text.py
